fix incorrect menu behavior on mobile

--- a/styles/layout.module.scss
+++ b/styles/layout.module.scss
@@ -111,7 +111,7 @@
   &Menu {
     --container-width: 23.5rem;
 
-    position: absolute;
+    position: fixed;
     transform-origin: 0 0;
     transform: translate(100%, 0);
     transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
